# FRIDAY

./: agent.py  create_sip_dispatch_rule.py  dispatch-rule.json  generate_context.py  generate_context_from_db.py  inbound-trunk.json  make_call.py  outbound-trunk.json  prompts.py  prompts_outbound.py  pyproject.toml  rag_index.py  tools.py
api/: context.py  main.py
client/: package-lock.json  package.json
client/src/: App.js  LivekitVoiceRoom.js
data/: temp_context.txt
integrations/rag_app/: main.py
transcripts/: call-_+919831431656_2Cc6MXJpYYuT_20250629-232014.txt  call-_+919831431656_9xmyqkxSjHqd_20250704-112218.txt  call-_+919831431656_A5eRbFehojKp_20250701-121108.txt  call-_+919831431656_Ddj97rbySL3b_20250630-082216.txt  call-_+919831431656_GFHK9un2e2zg_20250630-114816.txt  call-_+919831431656_TGkxzdEWw7pp_20250704-102816.txt  call-_+919831431656_XNUZjYvTQNaR_20250630-101733.txt  call-_+919831431656_XhKGuNQozECD_20250630-094228.txt  call-_+919831431656_byvGqV48K2DM_20250704-111407.txt  call-_+919831431656_hx6DNebohDJc_20250630-081626.txt  call-_+919831431656_icfU6MCd9vHs_20250704-112330.txt  call-_+919831431656_x9iUFhfYEQkJ_20250704-112449.txt  fake_room_20250630-114953.txt  fake_room_20250630-145625.txt  fake_room_20250702-071219.txt  fake_room_20250702-120355.txt  fake_room_20250702-170950.txt  fake_room_20250702-171023.txt  fake_room_20250702-172130.txt  fake_room_20250702-172534.txt  fake_room_20250704-082242.txt  fake_room_20250704-083213.txt  fake_room_20250704-095548.txt  fake_room_20250704-095804.txt  fake_room_20250704-100239.txt  fake_room_20250704-100446.txt  fake_room_20250704-101537.txt  fake_room_20250704-101613.txt  fake_room_20250704-101715.txt  fake_room_20250704-101807.txt  fake_room_20250707-102135.txt  fake_room_20250711-140603.txt  fake_room_20250712-132807.txt  fake_room_20250712-135428.txt  fake_room_20250712-142337.txt  fake_room_20250712-144242.txt  fake_room_20250713-171829.txt  fake_room_20250714-105149.txt  fake_room_20250714-105239.txt  fake_room_20250717-142631.txt  (+140 more)
