[tool.poetry]
name = "fridaylivekit"
version = "0.1.0"
description = ""
authors = ["satyamdas03 <116027621+satyamdas03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
livekit-agents = "^1.1.4"
livekit-plugins-openai = "^1.1.4"
livekit-plugins-silero = "^1.1.4"
livekit-plugins-google = "^1.1.4"
livekit-plugins-noise-cancellation = "^0.2.4"
mem0ai = "^0.1.112"
duckduckgo-search = "^8.0.4"
langchain-community = "^0.3.26"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
pypdf = "^5.6.1"
langchain-openai = "^0.3.27"
faiss-cpu = "^1.11.0"
livekit-plugins-deepgram = ">=1.1.4,<1.2.0"
livekit-api = "^1.0.3"
livekit-plugins-spitch = "^1.1.4"
livekit-plugins-sarvam = ">=1.0,<2.0"
aiohttp = "^3.12.13"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
openai = "^1.93.0"
pypdf2 = "^3.0.1"
pymongo = "^4.13.2"
beautifulsoup4 = "^4.13.4"
lxml = "^6.0.0"
livekit-plugins-cartesia = "^1.1.5"
livekit-plugins-turn-detector = "^1.1.5"
boto3 = "^1.39.4"
psycopg2 = "^2.9.10"
whisper = "^1.1.10"
docx = "^0.2.4"
pandas = "^2.3.1"
pytesseract = "^0.3.13"
flask = "^3.1.1"
flask-cors = "^6.0.1"
moviepy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
